fix multi-select checkbox dropdown alignment and set last row of a table to always align left

--- a/scss/admin.scss
+++ b/scss/admin.scss
@@ -456,6 +456,9 @@ table {
     @extend .grey-text;
     font-weight: normal;
   }
+  th:last-of-type:not(:only-of-type), td:last-of-type:not(:only-of-type) {
+    text-align: right;
+  }
 }
 
 table td {
